152final/target/generated-sources/antlr4/GooeyParser.cpp

    #include <map>
    #include "intermediate/symtab/Symtab.h"
    #include "intermediate/type/Typespec.h"
    using namespace intermediate::symtab;
    using namespace intermediate::type;


// Generated from Gooey.g4 by ANTLR 4.8


#include "GooeyVisitor.h"

#include "GooeyParser.h"


using namespace antlrcpp;
using namespace antlr4;

GooeyParser::GooeyParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

GooeyParser::~GooeyParser() {
  delete _interpreter;
}

std::string GooeyParser::getGrammarFileName() const {
  return "Gooey.g4";
}

const std::vector<std::string>& GooeyParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& GooeyParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

GooeyParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GooeyParser::ProgramHeaderContext* GooeyParser::ProgramContext::programHeader() {
  return getRuleContext<GooeyParser::ProgramHeaderContext>(0);
}

GooeyParser::BlockContext* GooeyParser::ProgramContext::block() {
  return getRuleContext<GooeyParser::BlockContext>(0);
}


size_t GooeyParser::ProgramContext::getRuleIndex() const {
  return GooeyParser::RuleProgram;
}


antlrcpp::Any GooeyParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::ProgramContext* GooeyParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, GooeyParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    programHeader();
    setState(101);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramHeaderContext ------------------------------------------------------------------

GooeyParser::ProgramHeaderContext::ProgramHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GooeyParser::ProgramHeaderContext::GOOEY() {
  return getToken(GooeyParser::GOOEY, 0);
}

GooeyParser::TitleContext* GooeyParser::ProgramHeaderContext::title() {
  return getRuleContext<GooeyParser::TitleContext>(0);
}


size_t GooeyParser::ProgramHeaderContext::getRuleIndex() const {
  return GooeyParser::RuleProgramHeader;
}


antlrcpp::Any GooeyParser::ProgramHeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitProgramHeader(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::ProgramHeaderContext* GooeyParser::programHeader() {
  ProgramHeaderContext *_localctx = _tracker.createInstance<ProgramHeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, GooeyParser::RuleProgramHeader);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(GooeyParser::GOOEY);
    setState(104);
    title();
    setState(105);
    match(GooeyParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FinishContext ------------------------------------------------------------------

GooeyParser::FinishContext::FinishContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GooeyParser::FinishContext::FIN() {
  return getToken(GooeyParser::FIN, 0);
}


size_t GooeyParser::FinishContext::getRuleIndex() const {
  return GooeyParser::RuleFinish;
}


antlrcpp::Any GooeyParser::FinishContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitFinish(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::FinishContext* GooeyParser::finish() {
  FinishContext *_localctx = _tracker.createInstance<FinishContext>(_ctx, getState());
  enterRule(_localctx, 4, GooeyParser::RuleFinish);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(GooeyParser::FIN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TitleContext ------------------------------------------------------------------

GooeyParser::TitleContext::TitleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GooeyParser::TitleContext::IDENTIFIER() {
  return getToken(GooeyParser::IDENTIFIER, 0);
}


size_t GooeyParser::TitleContext::getRuleIndex() const {
  return GooeyParser::RuleTitle;
}


antlrcpp::Any GooeyParser::TitleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitTitle(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::TitleContext* GooeyParser::title() {
  TitleContext *_localctx = _tracker.createInstance<TitleContext>(_ctx, getState());
  enterRule(_localctx, 6, GooeyParser::RuleTitle);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(GooeyParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

GooeyParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GooeyParser::DeclarationsContext* GooeyParser::BlockContext::declarations() {
  return getRuleContext<GooeyParser::DeclarationsContext>(0);
}

tree::TerminalNode* GooeyParser::BlockContext::MAIN() {
  return getToken(GooeyParser::MAIN, 0);
}

GooeyParser::CompoundStatementContext* GooeyParser::BlockContext::compoundStatement() {
  return getRuleContext<GooeyParser::CompoundStatementContext>(0);
}

GooeyParser::FinishContext* GooeyParser::BlockContext::finish() {
  return getRuleContext<GooeyParser::FinishContext>(0);
}

GooeyParser::FunctiondefContext* GooeyParser::BlockContext::functiondef() {
  return getRuleContext<GooeyParser::FunctiondefContext>(0);
}


size_t GooeyParser::BlockContext::getRuleIndex() const {
  return GooeyParser::RuleBlock;
}


antlrcpp::Any GooeyParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::BlockContext* GooeyParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 8, GooeyParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    declarations();
    setState(112);
    match(GooeyParser::T__1);
    setState(116);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GooeyParser::FUNC) {
      setState(113);
      functiondef();
      setState(114);
      match(GooeyParser::T__1);
    }
    setState(118);
    match(GooeyParser::MAIN);
    setState(119);
    match(GooeyParser::T__2);
    setState(120);
    compoundStatement();
    setState(121);
    finish();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsContext ------------------------------------------------------------------

GooeyParser::DeclarationsContext::DeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GooeyParser::DeclarationsContext::VAR() {
  return getToken(GooeyParser::VAR, 0);
}

GooeyParser::VariableDeclarationsListContext* GooeyParser::DeclarationsContext::variableDeclarationsList() {
  return getRuleContext<GooeyParser::VariableDeclarationsListContext>(0);
}


size_t GooeyParser::DeclarationsContext::getRuleIndex() const {
  return GooeyParser::RuleDeclarations;
}


antlrcpp::Any GooeyParser::DeclarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitDeclarations(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::DeclarationsContext* GooeyParser::declarations() {
  DeclarationsContext *_localctx = _tracker.createInstance<DeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 10, GooeyParser::RuleDeclarations);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(123);
    match(GooeyParser::VAR);
    setState(124);
    match(GooeyParser::T__2);
    setState(125);
    variableDeclarationsList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationsListContext ------------------------------------------------------------------

GooeyParser::VariableDeclarationsListContext::VariableDeclarationsListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GooeyParser::VariableDeclarationsContext *> GooeyParser::VariableDeclarationsListContext::variableDeclarations() {
  return getRuleContexts<GooeyParser::VariableDeclarationsContext>();
}

GooeyParser::VariableDeclarationsContext* GooeyParser::VariableDeclarationsListContext::variableDeclarations(size_t i) {
  return getRuleContext<GooeyParser::VariableDeclarationsContext>(i);
}


size_t GooeyParser::VariableDeclarationsListContext::getRuleIndex() const {
  return GooeyParser::RuleVariableDeclarationsList;
}


antlrcpp::Any GooeyParser::VariableDeclarationsListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitVariableDeclarationsList(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::VariableDeclarationsListContext* GooeyParser::variableDeclarationsList() {
  VariableDeclarationsListContext *_localctx = _tracker.createInstance<VariableDeclarationsListContext>(_ctx, getState());
  enterRule(_localctx, 12, GooeyParser::RuleVariableDeclarationsList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(127);
    variableDeclarations();
    setState(132);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(128);
        match(GooeyParser::T__0);
        setState(129);
        variableDeclarations(); 
      }
      setState(134);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(135);
    match(GooeyParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationsContext ------------------------------------------------------------------

GooeyParser::VariableDeclarationsContext::VariableDeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GooeyParser::TypesContext* GooeyParser::VariableDeclarationsContext::types() {
  return getRuleContext<GooeyParser::TypesContext>(0);
}

GooeyParser::VariableIdentifierListContext* GooeyParser::VariableDeclarationsContext::variableIdentifierList() {
  return getRuleContext<GooeyParser::VariableIdentifierListContext>(0);
}


size_t GooeyParser::VariableDeclarationsContext::getRuleIndex() const {
  return GooeyParser::RuleVariableDeclarations;
}


antlrcpp::Any GooeyParser::VariableDeclarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitVariableDeclarations(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::VariableDeclarationsContext* GooeyParser::variableDeclarations() {
  VariableDeclarationsContext *_localctx = _tracker.createInstance<VariableDeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 14, GooeyParser::RuleVariableDeclarations);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(137);
    types();
    setState(138);
    variableIdentifierList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableIdentifierListContext ------------------------------------------------------------------

GooeyParser::VariableIdentifierListContext::VariableIdentifierListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GooeyParser::VariableIdentifierContext *> GooeyParser::VariableIdentifierListContext::variableIdentifier() {
  return getRuleContexts<GooeyParser::VariableIdentifierContext>();
}

GooeyParser::VariableIdentifierContext* GooeyParser::VariableIdentifierListContext::variableIdentifier(size_t i) {
  return getRuleContext<GooeyParser::VariableIdentifierContext>(i);
}


size_t GooeyParser::VariableIdentifierListContext::getRuleIndex() const {
  return GooeyParser::RuleVariableIdentifierList;
}


antlrcpp::Any GooeyParser::VariableIdentifierListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitVariableIdentifierList(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::VariableIdentifierListContext* GooeyParser::variableIdentifierList() {
  VariableIdentifierListContext *_localctx = _tracker.createInstance<VariableIdentifierListContext>(_ctx, getState());
  enterRule(_localctx, 16, GooeyParser::RuleVariableIdentifierList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    variableIdentifier();
    setState(145);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GooeyParser::T__3) {
      setState(141);
      match(GooeyParser::T__3);
      setState(142);
      variableIdentifier();
      setState(147);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableIdentifierContext ------------------------------------------------------------------

GooeyParser::VariableIdentifierContext::VariableIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GooeyParser::VariableIdentifierContext::IDENTIFIER() {
  return getToken(GooeyParser::IDENTIFIER, 0);
}

GooeyParser::ModifierContext* GooeyParser::VariableIdentifierContext::modifier() {
  return getRuleContext<GooeyParser::ModifierContext>(0);
}


size_t GooeyParser::VariableIdentifierContext::getRuleIndex() const {
  return GooeyParser::RuleVariableIdentifier;
}


antlrcpp::Any GooeyParser::VariableIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitVariableIdentifier(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::VariableIdentifierContext* GooeyParser::variableIdentifier() {
  VariableIdentifierContext *_localctx = _tracker.createInstance<VariableIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 18, GooeyParser::RuleVariableIdentifier);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(148);
    match(GooeyParser::IDENTIFIER);
    setState(150);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GooeyParser::T__8) {
      setState(149);
      modifier();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypesContext ------------------------------------------------------------------

GooeyParser::TypesContext::TypesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GooeyParser::TypesContext::IDENTIFIER() {
  return getToken(GooeyParser::IDENTIFIER, 0);
}


size_t GooeyParser::TypesContext::getRuleIndex() const {
  return GooeyParser::RuleTypes;
}


antlrcpp::Any GooeyParser::TypesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitTypes(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::TypesContext* GooeyParser::types() {
  TypesContext *_localctx = _tracker.createInstance<TypesContext>(_ctx, getState());
  enterRule(_localctx, 20, GooeyParser::RuleTypes);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(152);
    match(GooeyParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctiondefContext ------------------------------------------------------------------

GooeyParser::FunctiondefContext::FunctiondefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GooeyParser::FunctiondefContext::FUNC() {
  return getToken(GooeyParser::FUNC, 0);
}

std::vector<GooeyParser::FuncDecContext *> GooeyParser::FunctiondefContext::funcDec() {
  return getRuleContexts<GooeyParser::FuncDecContext>();
}

GooeyParser::FuncDecContext* GooeyParser::FunctiondefContext::funcDec(size_t i) {
  return getRuleContext<GooeyParser::FuncDecContext>(i);
}


size_t GooeyParser::FunctiondefContext::getRuleIndex() const {
  return GooeyParser::RuleFunctiondef;
}


antlrcpp::Any GooeyParser::FunctiondefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitFunctiondef(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::FunctiondefContext* GooeyParser::functiondef() {
  FunctiondefContext *_localctx = _tracker.createInstance<FunctiondefContext>(_ctx, getState());
  enterRule(_localctx, 22, GooeyParser::RuleFunctiondef);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(154);
    match(GooeyParser::FUNC);
    setState(155);
    match(GooeyParser::T__2);
    setState(159);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GooeyParser::IDENTIFIER) {
      setState(156);
      funcDec();
      setState(161);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDecContext ------------------------------------------------------------------

GooeyParser::FuncDecContext::FuncDecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GooeyParser::ReturnTypeContext* GooeyParser::FuncDecContext::returnType() {
  return getRuleContext<GooeyParser::ReturnTypeContext>(0);
}

GooeyParser::FunctionNameContext* GooeyParser::FuncDecContext::functionName() {
  return getRuleContext<GooeyParser::FunctionNameContext>(0);
}

GooeyParser::ParameterContext* GooeyParser::FuncDecContext::parameter() {
  return getRuleContext<GooeyParser::ParameterContext>(0);
}

GooeyParser::StatementContext* GooeyParser::FuncDecContext::statement() {
  return getRuleContext<GooeyParser::StatementContext>(0);
}

GooeyParser::DeclarationsContext* GooeyParser::FuncDecContext::declarations() {
  return getRuleContext<GooeyParser::DeclarationsContext>(0);
}


size_t GooeyParser::FuncDecContext::getRuleIndex() const {
  return GooeyParser::RuleFuncDec;
}


antlrcpp::Any GooeyParser::FuncDecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitFuncDec(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::FuncDecContext* GooeyParser::funcDec() {
  FuncDecContext *_localctx = _tracker.createInstance<FuncDecContext>(_ctx, getState());
  enterRule(_localctx, 24, GooeyParser::RuleFuncDec);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(162);
    returnType();
    setState(163);
    functionName();
    setState(164);
    parameter();
    setState(165);
    match(GooeyParser::T__4);
    setState(167);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GooeyParser::VAR) {
      setState(166);
      declarations();
    }
    setState(169);
    statement();
    setState(170);
    match(GooeyParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

GooeyParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GooeyParser::ParameterDecListContext* GooeyParser::ParameterContext::parameterDecList() {
  return getRuleContext<GooeyParser::ParameterDecListContext>(0);
}


size_t GooeyParser::ParameterContext::getRuleIndex() const {
  return GooeyParser::RuleParameter;
}


antlrcpp::Any GooeyParser::ParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitParameter(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::ParameterContext* GooeyParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 26, GooeyParser::RuleParameter);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(172);
    match(GooeyParser::T__6);
    setState(174);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GooeyParser::IDENTIFIER) {
      setState(173);
      parameterDecList();
    }
    setState(176);
    match(GooeyParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterDecListContext ------------------------------------------------------------------

GooeyParser::ParameterDecListContext::ParameterDecListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GooeyParser::ParameterDecContext *> GooeyParser::ParameterDecListContext::parameterDec() {
  return getRuleContexts<GooeyParser::ParameterDecContext>();
}

GooeyParser::ParameterDecContext* GooeyParser::ParameterDecListContext::parameterDec(size_t i) {
  return getRuleContext<GooeyParser::ParameterDecContext>(i);
}


size_t GooeyParser::ParameterDecListContext::getRuleIndex() const {
  return GooeyParser::RuleParameterDecList;
}


antlrcpp::Any GooeyParser::ParameterDecListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GooeyVisitor*>(visitor))
    return parserVisitor->visitParameterDecList(this);
  else
    return visitor->visitChildren(this);
}

GooeyParser::ParameterDecListContext* GooeyParser::parameterDecList() {
  ParameterDecListContext *_localctx = _tracker.createInstance<ParameterDecListContext>(_ctx, getState());
  enterRule(_localctx, 28, GooeyParser::RuleParameterDecList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(178);
    parameterDec();
    setState(183);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GooeyParser::T__0) {
      setState(179);
      match(GooeyParser::T__0);
      setState(180);
      parameterDec();
      setState(185);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterDecContext ------------------------------------------------------------------

GooeyParser::ParameterDecContext::ParameterDecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}
